# unblink

./: .env.example  .gitignore  ADMIN.md  AGENTS.md  CLAUDE.md  CV_SYSTEM.md  Dockerfile  Makefile  README.md  UNBLINK_PROTOCOL.md  admin.ts  docker-compose.yml  entrypoint.sh  flake.nix  go.mod  go.sum  index.ts  node.dev.json  render.yaml  run.sh  server.config.example.json  tmux.dev.sh  tmux.lib.sh
app/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
backend/: appdir.ts  auth.ts  database.ts  database_inspect.ts  database_onboarding.ts  forward.ts  webhook.ts
database/: chat.go  client.go  frame.go  schema.go  service.go  storage.go  table_chat.go  table_event.go  table_service.go  table_sop_procedure.go  table_storage.go  table_user.go  table_user_node.go
docs/: BRIDGE_PROXY.md  CLIP_RECORDING_NOTES.md  EVENT_GRANULARITY.md  FEDERATED_WORKERS.md  SELF_HOSTING.md  UNBLINK_NODE_RELAY_PROTOCOL.md  VIDEO_GRAPH.md  vlm-performance.md
examples/: .gitignore
examples/worker-qwen3-vl/: README.md  main.py  pyproject.toml  test_custom_fps.py  test_video_input.py
examples/worker-qwen3-vl/events/: process_frame_batch_event.py
node/: client.go  config.go  conn.go  dashboard_output.go  go.mod  go.sum  protocol.go  reconnect.go  reconnect_test.go  state.go  ws_conn.go
plans/: windows-interactive-setup-and-autorun.md
proto/: buf.gen.go.yaml  buf.gen.ts.yaml
relay/: .env.example  README.md  auth.go  auth_http.go  authorize_http.go  bridge_tcp_proxy.go  config.go  database.go  go.mod  go.sum  http_api.go  (+8 more)
(+192 files in other folders)
